Fixed mobile svg gaps
> by putting some extra blank space to the svg and then increasing the negative margin
> replaced gitignore

--- a/css/all.css
+++ b/css/all.css
@@ -6443,7 +6443,7 @@ fieldset[disabled] .btn-custom-2.active {
 
 /*section separators*/
 .svg-separator {
-  margin-bottom: -5px; }
+  margin-bottom: -15px; }
 
 #aboutToProjectsDivider {
   background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAALElEQVQoU2N0sLb5z4AEfv38ycDGzs6ATjNiU4isEcQGacSqcNREWHgSHY4AftdNJ/NLukQAAAAASUVORK5CYII=);
