--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -57,7 +57,7 @@ $hoverOutTransitionTime: 0.2s;
 /*section separators*/
 
 .svg-separator{
-  margin-bottom: -5px;
+  margin-bottom: -15px;
 }
 
 #aboutToProjectsDivider{
